--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- 버튼 -->
         <ul class="btn">
             <li><a href="#">Top</a></li>
-            <li><a href="../index.html#projects">Home</a></li>
+            <li><a href="https://kitezo0.github.io/Portfolio/#projects">Home</a></li>
         </ul>
     </div>
 </body>
